--- a/Workshops/Workshop3/src/templates/index.html
+++ b/Workshops/Workshop3/src/templates/index.html
@@ -12,33 +12,33 @@
 <body>
 
 
-<article class="discographi">
-    <header class="discographi__header">
-        <div class="discographi__title">
+<article class="discography">
+    <header class="header">
+        <div class="header-title">
             DISCOGRAPHY
         </div>
-        <div class="discographi__title-text">
+        <div class="header-text">
             September 4 world heard Night Visions, the first full album. He reached the 2 position<br>
             in the chart Billboard 200. The single «It's Time» took 22 th place in the Billboard Hot 100,<br>
             4th in the Billboard Alternative and Billboard Rock, and now went platinum.
         </div>
     </header>
 
-    <ul class="discographi__content">
-        <li class="discographi__content_entity">
-            <div class="discographi__content_left">
-                <div class="discographi__content_data">
+    <main class="column">
+        <article class="content">
+            <div class="content__left">
+                <div class="content__left-date">
                     2010
                 </div>
-                <div class="discographi__content_title">
+                <div class="content_left-title">
                     HELL AND SILENCE
                 </div>
             </div>
-            <div class="discographi__content_right">
-                <div class="discographi__content_text-title">
+            <div class="content__right">
+                <div class="content__right-title">
                     Hell and Silence is an EP by Las Vegas rock group
                 </div>
-                <div class="discographi__content_text">
+                <div class="content__right-text">
                     Hell and Silence is an EP by Las Vegas rock group , released in March 2010 in the United States. It<br>
                     was recorded at Battle Born Studios. All songs were written by Imagine Dragons and self-produced.<br>
                     The EP was in part mixed by Grammy nominated engineer Mark Needham.<br>
@@ -47,64 +47,63 @@
                     United States with Nico Vega and Saint Motel. They also performed at Bite of Las Vegas Festival<br>
                     2010, New Noise Music Festival, Neon Reverb Festival, and Fork Fest.
                 </div>
-                <a href="#" class="discographi__content_button">
+                <button class="button content__right-button">
                     Play
-                </a>
+                </button>
             </div>
-        </li>
-        <li class="discographi__content_entity">
-            <div class="discographi__content_left">
-                <div class="discographi__content_data">
+        </article>
+        <article class="content">
+            <div class="content__left">
+                <div class="content__left-date">
                     2012
                 </div>
-                <div class="discographi__content_title">
+                <div class="content_left-title">
                     Night Visions
                 </div>
             </div>
-            <div class="discographi__content_right">
-                <div class="discographi__content_text-title">
+            <div class="content__right">
+                <div class="content__right-title">
                     Night Visions is the debut studio album by American rock band
                 </div>
-                <div class="discographi__content_text">
+                <div class="content__right-text">
                     It was released on September 4, 2012 through Interscope Records. The extended track was<br>
                     released on February 12, 2013, adding three more songs. Recorded between 2010 and 2012, the<br>
                     album was primarily produced by the band themselves, as well as English hip-hop producer Alex da<br>
                     Kid and Brandon Darner from the American indie rock group The Envy Corps. It was mastered by<br>
                     Joe LaPorta. According to frontman Dan Reynolds, the album took three years to finish ...
                 </div>
-                <a href="#" class="discographi__content_button">
+                <button class="button content__right-button">
                     Play
-                </a>
+                </button>
             </div>
-        </li>
-        <li class="discographi__content_entity">
-            <div class="discographi__content_left">
-                <div class="discographi__content_data">
+        </article>
+        <article class="content">
+            <div class="content__left">
+                <div class="content__left-date">
                     2015
                 </div>
-                <div class="discographi__content_title">
+                <div class="content_left-title">
                     Smoke + Mirrors
                 </div>
             </div>
-            <div class="discographi__content_right">
-                <div class="discographi__content_text-title">
+            <div class="content__right">
+                <div class="content__right-title">
                     The album was recorded during 2014<br>
                     at the band's home studio in Las Vegas, Nevada
                 </div>
-                <div class="discographi__content_text">
+                <div class="content__right-text">
                     Self-produced by members of the band along with English hip-hop producer Alexander Grant,<br>
                     known by his moniker Alex da Kid, the album was released by Interscope Records and Grant's<br>
                     KIDinaKORNER label on February 17, 2015, in the United States.
                 </div>
-                <a href="#" class="discographi__content_button">
+                <button class="button content__right-button">
                     Play
-                </a>
+                </button>
             </div>
-        </li>
-    </ul>
+        </article>
+    </main>
 
-    <footer class="discographi__footer">
-        <img class="discographi__image" src="../images/footer.png">
+    <footer class="footer">
     </footer>
 </article>
 
