--- a/Homeworks/Homework3/src/templates/contact.html
+++ b/Homeworks/Homework3/src/templates/contact.html
@@ -37,8 +37,10 @@
                 senectus et netus et malesuada fames ac turpis egestas. Nunc eu neque eros. Ut eu quam justo.
             </div>
             <div class="contact_form">
-                <input type="text" class="contact_form-text contact_form-name" placeholder="Your Name">
-                <input type="text" class="contact_form-text contact_form-email" placeholder="Email">
+                <div style="display: flex">
+                    <input type="text" class="contact_form-text contact_form-name" placeholder="Your Name">
+                    <input type="text" class="contact_form-text contact_form-email" placeholder="Email">
+                </div>
                 <input type="text" class="contact_form-text contact_form-subject" placeholder="Subject">
                 <input type="text" class="contact_form-text contact_form-massage" placeholder="Your Massage">
             </div>
