--- a/Homeworks/Homework3/src/styles/footer.css
+++ b/Homeworks/Homework3/src/styles/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    height: 530px;
+    height: auto;
     background-color: #5c6bc0;
     margin: 0 0 0 0;
     padding: 1px 1px 1px 1px;
