--- a/Homeworks/Homework3/src/styles/contact/contact.css
+++ b/Homeworks/Homework3/src/styles/contact/contact.css
@@ -1,3 +1,16 @@
+body {
+    width: auto;
+    height: auto;
+    background-color: #f7f9fc;
+    margin: 80px 0 0 0;
+    padding: 1px 0 0 0;
+}
+
+.contact_main {
+    margin: 0 0 0 224px;
+    width: auto;
+}
+
 .block {
     margin-left: 94px;
     margin-right: 94px;
@@ -5,12 +18,12 @@
 
 .contact {
     margin-top: 75px;
-    width: 952px;
+    width: auto;
     height: auto;
     box-shadow: 0 0 25px rgba(0,0,0,0.1);
     background-color: #ffffff;
     margin-bottom: 50px;
-    position:relative;
+    position: relative;
     padding: 1px 0 0 0;
 }
 
@@ -24,9 +37,11 @@
 }
 
 .contact_button {
-    margin-top: 30px;
+    margin-top: 62px;
     margin-left: 70px;
     margin-bottom: 30px;
+    font-size: 24px;
+    line-height: 50px;
 }
 
 .contact_text {
@@ -35,7 +50,9 @@
     line-height: 30px;
     color: #000000;
     font-family: Lato, serif;
-    border-bottom: 1px ;
+    border-bottom: 2px solid #eeeeee;
+    padding-bottom: 37px;
+    margin-bottom: 49px;
 }
 
 .contact_form-text {
@@ -45,36 +62,303 @@
     font-family: Lato, serif;
     background-color: #f7f9fc;
     border: 0;
-}
-
-.contact_form-text:focus {
-    border: 0;
+    height: 56px;
 }
 
 .contact_form {
     width: auto;
 }
 
-.contact_user {
+.contact_form-flex {
     display: flex;
 }
 
-.contact_user-name {
-    width: 50%;
+.contact_form-name {
+    width: calc(50% - 34px);
     margin-right: 20px;
+    margin-bottom: 20px;
+    padding-left: 34px;
 }
 
-.contact_user-email {
-    width: 50%;
-    margin-left: 0;
+.contact_form-email {
+    width: calc(50% - 22px);
+    margin-left: 20px;
+    padding-left: 22px;
 }
 
 .contact_form-subject {
     display: block;
-    width: 100%;
+    width: calc(100% - 34px);
+    margin-bottom: 20px;
+    padding-left: 34px;
 }
 
 .contact_form-massage {
     display: block;
-    width: 100%;
+    width: calc(100% - 34px);
+    height: 145px;
+    padding-left: 34px;
 }
+
+.footer {
+    height: auto;
+    background-color: #5c6bc0;
+    margin: 0 0 0 0;
+    padding: 1px 1px 1px 1px;
+}
+
+.footer_ul{
+    text-align: center;
+}
+
+.footer_ul-li{
+    margin-left: 43px;
+    display: inline-block;
+}
+
+
+
+
+.footer_button-a{
+    font-size: 16px;
+    line-height: 25px;
+    color: #9da6d9;
+    font-family: Lato, serif;
+    font-weight: bold;
+    text-align: right;
+}
+
+.footer_button{
+    font-size: 16px;
+    line-height: 25px;
+    color: #ffffff;
+    font-family: Lato, serif;
+    font-weight: bold;
+    text-align: right;
+}
+
+.footer_button:hover{
+    border-bottom: 1px solid #ffffff;
+}
+
+.footer_button:focus{
+    border-bottom: 0 solid #ffffff;
+}
+
+.footer_button-curr{
+    font-size: 16px;
+    line-height: 25px;
+    color: #9da6d9;
+    font-family: Lato, serif;
+    font-weight: bold;
+    text-align: right;
+}
+
+.footer_text {
+    text-align: center;
+    font-size: 14px;
+    letter-spacing: -0.022px;
+    line-height: 25px;
+    color: #9da6d9;
+    font-family: Lato, serif;
+}
+
+.footer_text a{
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.footer_text a:hover{
+    color: #ffffff;
+    font-weight: bold;
+    border-bottom: 1px solid #ffffff;
+}
+
+
+.footer_name {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 36px;
+    line-height: 25px;
+    color: #4a569a;
+    font-family: Lato, serif;
+    font-weight: bold;
+    font-style: italic;
+}
+
+.footer_line {
+    height: 2px;
+    width: 756px;
+    background-color: #5665b4;
+    margin: 20px auto 10px;
+}
+
+
+.footer_search{
+    width: 16px;
+    height: 16px;
+    margin: 8px 8px;
+}
+
+.footer_icon {
+    display: inline;
+    width: 32px;
+    height: 32px;
+    padding: 1px 1px 1px 1px;
+}
+
+.footer_icon:hover {
+    width: 32px;
+    line-height: 32px;
+    background-color: #5360ac;
+}
+
+.footer_icon_img{
+    width: 22px;
+    height: 22px;
+    margin: 5px 5px;
+}
+
+@media screen and (max-width: 480px) {
+    .header_search{
+        margin-top: 6px;
+        width: 16px;
+        height: 17px;
+        display: inline-block;
+        float: right;
+        background: url("../../images/burger.png");
+    }
+
+    .header_search:hover{
+        background: url("../../images/burger.png");
+    }
+
+    .header_ul{
+        display: none;
+    }
+
+    .block {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
+    .contact_main {
+        margin: 0 0 0 15px;
+        width: auto;
+    }
+
+    .contact {
+        width: 450px;
+    }
+
+    .contact_form-flex {
+        display: block;
+    }
+
+
+    .contact_form-name {
+        width: calc(100% - 34px);
+        margin-right: 0;
+        padding-left: 34px;
+    }
+
+    .contact_form-email {
+        width: calc(100% - 34px);
+        margin-left: 0;
+        margin-bottom: 20px;
+        padding-left: 34px;
+    }
+
+    .contact_form-subject {
+        display: block;
+        width: calc(100% - 34px);
+        margin-bottom: 20px;
+        padding-left: 34px;
+    }
+
+    .contact_form-massage {
+        display: block;
+        width: calc(100% - 34px);
+        height: 145px;
+        padding-left: 34px;
+    }
+
+    .contact_button {
+        margin-left: 28px;
+    }
+
+    .footer_ul-li{
+        display: block;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .block {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .contact {
+        width: 280px;
+    }
+
+    .header_search{
+        margin-top: 6px;
+        width: 16px;
+        height: 17px;
+        display: inline-block;
+        float: right;
+        background: url("../../images/burger.png");
+    }
+
+    .header_search:hover{
+        background: url("../../images/burger.png");
+    }
+
+    .header_ul{
+        display: none;
+    }
+
+    .contact_main {
+        margin: 0 0 0 15px;
+        width: auto;
+    }
+
+
+    .contact_form-flex {
+        display: block;
+    }
+
+
+    .contact_form-name {
+        width: calc(100% - 34px);
+        margin-right: 0;
+        padding-left: 34px;
+    }
+
+    .contact_form-email {
+        width: calc(100% - 34px);
+        margin-left: 0;
+        margin-bottom: 20px;
+        padding-left: 34px;
+    }
+
+    .contact_form-subject {
+        display: block;
+        width: calc(100% - 34px);
+        margin-bottom: 20px;
+        padding-left: 34px;
+    }
+
+    .contact_form-massage {
+        display: block;
+        width: calc(100% - 34px);
+        height: 145px;
+        padding-left: 34px;
+    }
+
+    .footer_ul-li{
+        display: block;
+    }
+}
+
