--- a/Homeworks/Homework3/src/templates/contact.html
+++ b/Homeworks/Homework3/src/templates/contact.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/index.css">
     <link rel="stylesheet" href="../styles/main.css">
@@ -14,7 +13,7 @@
 <body>
 
 
-<div class="main">
+<div class="contact_main">
     <div class="header">
         <img src="../images/PaloAlto.png">
         <a class="header_search" href="#"></a>
@@ -32,17 +31,17 @@
                 Contact Us
             </div>
             <div class="contact_text">
-                Nam in maximus arcu, ac aliquam tellus. Donec vestibulum ipsum nunc, at placerat ante posuere non.<br>
-                Integer at dui a lacus suscipit elementum id non massa. Pellentesque habitant morbi tristique<br>
+                Nam in maximus arcu, ac aliquam tellus. Donec vestibulum ipsum nunc, at placerat ante posuere non.
+                Integer at dui a lacus suscipit elementum id non massa. Pellentesque habitant morbi tristique
                 senectus et netus et malesuada fames ac turpis egestas. Nunc eu neque eros. Ut eu quam justo.
             </div>
             <div class="contact_form">
-                <div class="contact_user">
-                    <input type="text" class="contact_form-text contact_user-name" placeholder="Your Name">
-                    <input type="text" class="contact_form-text contact_user-email" placeholder="Email">
+                <div class="contact_form-flex">
+                    <input type="text" class="contact_form-text contact_form-name" placeholder="Your Name">
+                    <input type="text" class="contact_form-text contact_form-email" placeholder="Email">
                 </div>
                 <input type="text" class="contact_form-text contact_form-subject" placeholder="Subject">
-                <input type="text" class="contact_form-text contact_form-massage" placeholder="Your Massage">
+                <input type="text" class="contact_form-text contact_form-massage" placeholder="Your Massage"> <!-- TODO: переделать через textarea-->
             </div>
         </div>
         <button class="button contact_button">
@@ -54,12 +53,12 @@
 
 <div class="footer">
     <img style="margin-top: 66px; margin-left: auto; margin-right: auto; display: block;" src="../images/footer/PaloAlto.png">
-    <ul style="margin-top: 43px">
-        <li><a class="footer_button" href="index.html">HOME</a></li>
-        <li><a class="footer_button" href="#">ABOUT</a></li>
-        <li><a class="footer_button" href="#">ARCHIVE</a></li>
-        <li><a class="footer_button-curr">CONTACT</a></li>
-        <li class="footer_icon" style="display: inline-block; position: relative; top: 10px;">
+    <ul class="footer_ul">
+        <li class="footer_ul-li"><a class="footer_button" href="index.html">HOME</a></li>
+        <li class="footer_ul-li"><a class="footer_button" href="#">ABOUT</a></li>
+        <li class="footer_ul-li"><a class="footer_button" href="#">ARCHIVE</a></li>
+        <li class="footer_ul-li"><a class="footer_button-curr">CONTACT</a></li>
+        <li class="footer_icon footer_ul-li" style="display: inline-block; position: relative; top: 10px;">
             <a href="allala">
                 <img class="footer_search" src="../images/footer/search.png">
             </a>
@@ -75,7 +74,7 @@
     <div class="footer_text" style="margin-top: 29px">
         © 2015 - Palo Alto. All Rights Reserved. Designed & Developed by<a href="index.html">PixelBuddha Team</a>
     </div>
-    <ul style="margin-top: 28px">
+    <ul style="margin-top: 28px; text-align: center;  ">
         <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/facebook.png"></li>
         <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/twitter.png"></li>
         <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/instagram.png"></li>
