--- a/Homeworks/Homework3/src/styles/contact/contact.css
+++ b/Homeworks/Homework3/src/styles/contact/contact.css
@@ -213,7 +213,7 @@ body {
     background-color: #5360ac;
 }
 
-.footer_icon_img{
+.footer_icon-img{
     width: 22px;
     height: 22px;
     margin: 5px 5px;
