--- a/Homeworks/Homework3/src/templates/contact.html
+++ b/Homeworks/Homework3/src/templates/contact.html
@@ -75,10 +75,10 @@
         © 2015 - Palo Alto. All Rights Reserved. Designed & Developed by<a href="index.html">PixelBuddha Team</a>
     </div>
     <ul style="margin-top: 28px; text-align: center;  ">
-        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/facebook.png"></li>
-        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/twitter.png"></li>
-        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/instagram.png"></li>
-        <li class="footer_icon"><img class="footer_icon_img" src="../images/footer/pinterest.png"></li>
+        <li class="footer_icon"><img class="footer_icon-img" src="../images/footer/facebook.png"></li>
+        <li class="footer_icon"><img class="footer_icon-img" src="../images/footer/twitter.png"></li>
+        <li class="footer_icon"><img class="footer_icon-img" src="../images/footer/instagram.png"></li>
+        <li class="footer_icon"><img class="footer_icon-img" src="../images/footer/pinterest.png"></li>
     </ul>
 </div>
 
